Don't test for INKERNEL to check whether we're in kernel space.

It turns out that <machine/param.h> actually defines a macro under this
name, even when we're not in kernelspace. This causes us to suppress
some macro definitions that are used by userspace apps.

PR:		210026
Reported by:	jbeich@
MFC after:	2 weeks